# sudocv

./: .gitignore  .replit  Makefile  README.rst  pyproject.toml  sudocv.py
lib/: collector.py
sudocv/: __init__.py  collector.py  document.py
tests/: test_sudocv.py
