[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["John Aldrich Bernardo <4ldrich@protonmail.com>"]
description = ""
name = "sudocv"
version = "0.1.0"
[tool.poetry.dependencies]
click = "^7.0"
pygithub = "^1.45"
pyinstaller = "^3.6"
python = "^3.7"
python-docx = "^0.8.10"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
